# ai-text-outline-benchmark

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
benchmark/: compare.py  config.py  download_toc_images.py  extract_data.py  metrics.py  prepare_dataset.py  report.py  review_samples.py  run_all.py  run_pipeline.py  segment_tier_report.py
data/: ground_truth.json  report.md  results.json  review_report.md  segment_tiers.md
data/predictions/: 03775fbc-1a5a-44ae-a7ce-b4dddda81961.json  04f972f1-4471-4072-877e-ca762517f34a.json  0971f84e-37ef-4d54-b539-5d287efcb5f7.json  0984a94e-cb88-4796-8405-f791335fe825.json  0add1ba2-7d14-4218-aa47-eb11dde5777e.json  13014d54-0ad5-4f52-9e53-ba9f0f6a61fa.json  1c9729a0-3a09-4d51-9ffb-5d387412020c.json  1d5493b9-1bde-4aff-8d16-43b752d04469.json  1f1f9d67-2d7a-4b63-b95e-6f8855988a0c.json  21c5e73d-fcfb-45fa-a554-f9bbc1f352b4.json  241e084b-2b6c-47ff-bea4-142c0274aa1a.json  27e0e33d-8100-41f4-9bef-3fa50967a83c.json  2c40ae84-2b46-4e60-987f-28968d9abff7.json  35cd7850-fdbc-46cf-a763-241e3eea3535.json  37585eda-a26b-4f6a-a9fb-63ddf4f2295e.json  383611d0-6392-42d3-aa4c-c61384160c0b.json  3b7c0fd6-321a-4ee2-8bfd-354cdf7f894d.json  3ed92322-fce1-4328-8679-098310badbf5.json  3f1fc0bf-1e4a-4243-85f0-0e48c9145a28.json  3f2eb56d-7f93-4bdc-a0d2-1e98c05a7d2d.json  4429689f-0582-4890-ade0-685998e7ef4f.json  46b4bd4a-9f7d-46e7-b956-d871c05bf072.json  4b130d35-c3f9-4db6-bb1a-1796816d31f7.json  (+39 more)
docs/: GUIDE.md  architecture.md  failure_modes.md  metrics.md  segment_tiering.md  versioning.md
(+166 files in other folders)
